Updated libraries version, Added Throttle and Range Input Stream to control download part and speed of download, Updated filecode to 8 byte sha256 base64 codes